syntax = "proto3";

package test.diff;

option java_package = "test.diff.v1";
option java_outer_classname = "TestProtos";

// Test message for diff comparison
message User {
    int64 id = 1;
    string name = 2;
    string email = 3;
    UserStatus status = 4;
    repeated string tags = 5;
    Address address = 6;
}

message Address {
    string street = 1;
    string city = 2;
    string country = 3;
    string zip_code = 4;
}

// This message will be removed in v2
message DeprecatedMessage {
    string old_field = 1;
}

enum UserStatus {
    USER_STATUS_UNSPECIFIED = 0;
    USER_STATUS_ACTIVE = 1;
    USER_STATUS_INACTIVE = 2;
    USER_STATUS_DELETED = 3;
}
